--- a/index.html
+++ b/index.html
@@ -149,20 +149,25 @@
                 <div class="md:col-span-2 mt-8 bg-teal-50 p-8 rounded-xl border border-teal-200">
                     <h4 class="text-xl font-bold text-gray-800 mb-4 text-center">※ 문서 발송 순서 개선을 통한 리스크 방지</h4>
                     <p class="text-center text-gray-600 mb-8">현재 1차, 2차 문서를 동시에 발송하여, 가맹희망자가 1차 문서를 읽지 않고 2차 제공확인서를 먼저 작성하는 허위 작성 리스크가 존재합니다. 이를 방지하기 위해 아래와 같이 시스템을 개선합니다.</p>
+                    <div class="text-center mb-8 px-4">
+                        <div class="inline-block bg-white p-3 rounded-lg shadow-sm border border-gray-200 text-sm">
+                            <span class="font-semibold text-blue-600">1차 문서:</span> 정보공개서, 가맹계약서
+                        </div>
+                        <div class="inline-block bg-white p-3 rounded-lg shadow-sm border border-gray-200 text-sm mt-2 md:mt-0 md:ml-4">
+                            <span class="font-semibold text-blue-600">2차 문서:</span> 인근가맹점현황 문서 및 제공확인서
+                        </div>
+                    </div>
                     <div class="flex flex-col md:flex-row items-center justify-center space-y-4 md:space-y-0 md:space-x-2">
                         <div class="flow-item p-3 border-2 bg-white border-gray-300 rounded-lg text-center transition-all duration-300 w-full md:w-56">
                             <h4 class="font-semibold text-base">1. 1차 문서 발송</h4>
-                            <p class="text-xs text-gray-500 mt-1">정보공개서, 가맹계약서</p>
                         </div>
                         <div class="flex items-center w-full md:w-auto"><div class="flow-arrow hidden md:block mx-2"></div></div>
                         <div class="flow-item p-3 border-2 bg-white border-gray-300 rounded-lg text-center transition-all duration-300 w-full md:w-56">
                             <h4 class="font-semibold text-base">2. 1차 문서 열람 확인</h4>
-                            <p class="text-xs text-gray-500 mt-1">시스템 자동 감지</p>
                         </div>
                         <div class="flex items-center w-full md:w-auto"><div class="flow-arrow hidden md:block mx-2"></div></div>
                         <div class="flow-item p-3 border-2 bg-white border-gray-300 rounded-lg text-center transition-all duration-300 w-full md:w-56">
                             <h4 class="font-semibold text-base">3. 2차 문서 자동 생성/발송</h4>
-                            <p class="text-xs text-gray-500 mt-1">1차 문서 열람 5~10분 후 자동 생성<br>→ 사업기획팀 작성/발송</p>
                         </div>
                     </div>
                 </div>
